Server crash when passed invalid JS in CodeWScope object

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • None
    • Affects Version/s: 2.1.0
    • Component/s: JavaScript
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If you pass uncompilable javascript into mongo via a CodeWScope BSON object, the server crashes. Compiling from a "Code" object has a NULL-check around compilation, but compiling from CodeWScope doesn't. Patch at https://gist.github.com/1080695 fixes.

            Assignee:
            Antoine Girbal (Inactive)
            Reporter:
            Ben Osheroff
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: