SERVER-3425: Server crash when passed invalid JS in CodeWScope object